<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.yumin.spacex.viewmodel.LaunchViewModel" />

        <variable
            name="callback"
            type="com.yumin.spacex.ui.SortCallback" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/sort_by"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/light_gray" />

        <RadioGroup
            android:id="@+id/sortGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:checkedButton="@{viewModel.sortChecked}"
            android:onCheckedChanged="@{(group, checkedId)->callback.sortChanged(group,checkedId)}">

            <RadioButton
                android:id="@+id/sortNewest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:buttonTint="@color/sort_color"
                android:text="@string/sort_newest" />

            <RadioButton
                android:id="@+id/sortOldest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:buttonTint="@color/sort_color"
                android:text="@string/sort_oldest" />

        </RadioGroup>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>