<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="groupItem"
            type="com.yumin.spacex.model.GroupItem" />
        <variable
            name="payloadData"
            type="com.yumin.spacex.model.Payload" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{payloadData.payloadId}"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/content"
            tools:text="Title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"/>

            <TextView
                android:id="@+id/capSerial"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="@+id/guideline4"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/cap_serial"/>

            <TextView
                android:id="@+id/capVal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="@+id/guideline4"
                app:layout_constraintTop_toBottomOf="@+id/capSerial"
                app:layout_constraintStart_toStartOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="CapVal"
                android:text="@{payloadData.capSerial ?? @string/no_info}"/>

            <TextView
                android:id="@+id/nationality"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                android:text="@string/nationality"/>

            <TextView
                android:id="@+id/nationalityVal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nationality"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="NationalityVal"
                android:text="@{payloadData.nationality ?? @string/no_info}"/>


            <TextView
                android:id="@+id/manufacturer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@id/guideline4"
                app:layout_constraintTop_toBottomOf="@+id/capVal"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/manufacturer"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="@+id/guideline4"
                app:layout_constraintTop_toBottomOf="@+id/manufacturer"
                app:layout_constraintStart_toStartOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="ManufacturerVal"
                android:text="@{payloadData.manufacturer ?? @string/no_info}"/>

            <TextView
                android:id="@+id/payloadType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nationalityVal"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                android:text="@string/payload_type"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/payloadType"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="PayloadVal"
                android:text="@{payloadData.payloadType ?? @string/no_info}"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>